moved textures into folder and gameman